# sinema-rc-tools

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md
dashboard/: README.md  docker-compose.yml
dashboard/src/grafana/: Dockerfile  grafana.ini
dashboard/src/grafana/dashboards/: dashboard.json  operation-panel.yaml
dashboard/src/grafana/datasources/: postgresql.yaml
dashboard/src/python-userlog-app/: Dockerfile  start.sh
dashboard/src/python-userlog-app/cfg-data/: sample.env_data.txt
dashboard/src/python-userlog-app/userlog-app/: postgresDB_example.py
restapi/: .gitignore  setup.py
restapi/sinemarc_api/: __init__.py
restapi/sinemarc_api/example/: __main__.py  postgresDB_example.py
restapi/sinemarc_api/lib/: srcapi_core.py
sinemarc-api/: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
sinemarc-api/docs/: README.md
sinemarc-api/docs/sinemarc_api/: index.md
sinemarc-api/docs/sinemarc_api/example/: index.md  influxDB_example.md  module.md  postgresDB_example.md
sinemarc-api/docs/sinemarc_api/lib/: definitions.md  exception_definition.md  index.md  srcapi_core.md
sinemarc-api/sinemarc_api/example/: __init__.py  influxDB_example.py
sinemarc-api/sinemarc_api/lib/: __init__.py  definitions.py  exception_definition.py  srcapi_core.py
