[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "sinemarc_api"
version = "0.0.1"
authors = [
  { name="Torsten Keidel", email="siemens@support.com" },
]
description = "A libary for the rest api of SINEMA RC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/siemens/sinema-rc-tools"
"Bug Tracker" = "https://github.com/siemens/sinema-rc-tools/issues"